# dalston

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  Makefile  PLAN.md  README.md  THIRD_PARTY_NOTICES.md  alembic.ini  docker-compose.gpu.yml  docker-compose.riva.yml  docker-compose.yml  package-lock.json  package.json  plan.md  playwright.config.ts  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-engine-faster-whisper.yml  build-engine-hf-asr.yml  build-engine-nemo.yml  build-engine-onnx.yml  build-engine-parakeet-onnx.yml  build-engine-prepare.yml  build-engine-pyannote-diarize.yml  build-engine-vllm-asr.yml  build-gateway.yml  build-orchestrator.yml  ci.yml  codeql.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_drop_realtime_enhance_on_end.py  0003_backfill_model_transcribe.py  0004_rename_runtime_identity_columns.py  0005_add_model_download_progress_columns.py  0006_rename_streaming_to_native_streaming.py  0007_add_presigned_url_columns_to_tasks.py  0007_rename_task_input_output_uri.py  0008_add_task_ready_at.py  20260213_0007_create_retention_policies_table.py  20260213_0009_create_audit_log_table.py  20260214_0011_add_fk_on_delete_set_null.py  20260214_0012_add_pii_columns_to_jobs.py  20260214_0013_create_pii_entity_types_table.py  20260224_0017_remove_realtime_artifact_types.py  20260228_0024_add_job_retry_fields.py  20260302_0024_create_models_table.py  20260302_0025_add_models_capitalization.py  20260302_0026_migrate_to_namespaced_model_ids.py  20260303_0017_add_created_by_key_id.py  20260303_0028_add_job_display_name.py  20260303_0029_add_created_by_key_id.py  20260304_0030_drop_legacy_retention_fields.py  20260309_0001_add_model_management_column.py
cli/: README.md  pyproject.toml
cli/dalston_cli/: __init__.py  audio.py  config.py  main.py  messages.py  output.py
cli/dalston_cli/bootstrap/: __init__.py  model_manager.py  preflight.py  server_manager.py  settings.py
cli/dalston_cli/commands/: __init__.py  engines.py  export.py  jobs.py  listen.py  models.py  server.py  sessions.py  status.py  transcribe.py
cli/tests/: __init__.py  test_audio.py  test_cli.py  test_models_command.py
dalston/: config.py  logging.py  metrics.py  metrics_exporter.py  telemetry.py
dalston/common/: __init__.py  artifacts.py  audio_defaults.py  audit.py  constants.py  durable_events.py  engine_yaml.py  events.py  model_selection_keys.py  models.py  node_identity.py  pipeline_types.py  presigned.py  queue_backends.py  redis.py  registry.py  retention.py  s3.py  streams.py  streams_sync.py  streams_types.py  timeouts.py  transcript.py  utils.py  ws_close_codes.py
dalston/db/: __init__.py  dialect_helpers.py  migrate.py  models.py  session.py  types.py
dalston/engine_sdk/: __init__.py  admission.py  audio.py  base.py  base_composite.py  base_transcribe.py  composite_runner.py  context.py  contracts.py  device.py  diarize_chunking.py  diarize_dtype.py  disk_cache.py  engine_loader.py  gpu_lock.py  http.py  http_align.py  http_combined.py  http_compat.py  http_diarize.py  http_server.py  http_transcribe.py  inference_server.py  io.py  local_runner.py  materializer.py  model_manager.py  model_paths.py  model_storage.py  registry.py  runner.py  silero_vad.py  types.py  vad.py  vram_budget.py
dalston/gateway/: __init__.py  cli.py  dependencies.py  error_codes.py  main.py
dalston/orchestrator/: __init__.py  catalog.py  cleanup.py  dag.py  defaults.py  delivery.py  distributed_main.py  engine_catalog.yaml  engine_selector.py  exceptions.py  generated_catalog.json  handlers.py  lite_capabilities.py  lite_main.py  lite_messages.py  main.py  parity.py  post_processor.py  realtime_registry.py  reconciler.py  registry.py  stats.py  (+5 more)
debug/: download_artifacts.py
docker/: Dockerfile.base-engine  Dockerfile.base-nemo  Dockerfile.base-onnx  Dockerfile.base-pyannote  Dockerfile.base-pytorch  Dockerfile.engine-base  Dockerfile.gateway  Dockerfile.orchestrator
docs/: CODE_STANDARDS.md  GLOSSARY.md  README.md  TODO-observability.md  WEB_CONSOLE_UI_REVIEW.md  nemo-streaming-test-suite-plan.md  top-100-asr-models.md  tts-architecture-plan.md
hooks/: pre-push
models/: facebook-wav2vec2-base-960h-align.yaml  faster-distil-whisper-large-v3.yaml  faster-whisper-base.yaml  faster-whisper-large-v3-turbo.yaml  faster-whisper-large-v3.yaml  faster-whisper-medium.yaml  faster-whisper-small.yaml  faster-whisper-tiny.yaml  gliner-multi-v2-1-pii.yaml  jonatasgrosman-wav2vec2-large-xlsr-53-japanese-align.yaml  nemo-msdd-telephonic.yaml  nvidia-diar-sortformer-4spk-v2.1.yaml  parakeet-ctc-0.6b.yaml  parakeet-ctc-1.1b-riva.yaml  parakeet-ctc-1.1b.yaml  parakeet-onnx-ctc-0.6b.yaml  parakeet-onnx-ctc-1.1b.yaml  parakeet-onnx-rnnt-0.6b.yaml  parakeet-onnx-tdt-0.6b-v2.yaml  parakeet-onnx-tdt-0.6b-v3.yaml  parakeet-rnnt-0.6b.yaml  parakeet-tdt-0.6b-v3.yaml  parakeet-tdt-1.1b.yaml  pyannote-speaker-diarization-community-1.yaml  vllm-asr-qwen2-audio-7b.yaml  vllm-asr-voxtral-mini-3b.yaml  vllm-asr-voxtral-small-24b.yaml
scripts/: check-runtime-freshness.sh  diagnose-gpu.py  docker-gc.sh  fetch_ami_spike.sh  generate_catalog.py  install-hooks.sh  seed_test_api_key.py  test_elevenlabs_realtime.py  test_elevenlabs_sdk.py  test_engine_http.py  test_native_realtime.py  test_openai_compat.py  test_pipeline_e2e_matrix.py  test_realtime_stream.py  test_session_reconciliation.py  test_session_reconciliation_e2e.py  validate_catalog_compose.py  verify-m01.sh
sdk/: README.md  pyproject.toml
sdk/dalston/: __init__.py  client.py  exceptions.py  realtime.py  types.py
sdk/dalston_sdk/: __init__.py  _version.py  client.py  exceptions.py  realtime.py  types.py  webhook.py
sdk/tests/: __init__.py  test_client.py  test_realtime.py  test_webhook.py
tests/: conftest.py  dag_test_helpers.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+1133 files in other folders)
