[project]
name = "dalston"
version = "0.1.0"
description = "Modular, self-hosted audio transcription server"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
gateway = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "aioboto3>=13.0.0",
    "types-aiobotocore-s3>=2.13.0",
    "structlog>=24.0.0",
    "websockets>=12.0",  # For realtime WebSocket proxy
]
orchestrator = [
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "aioboto3>=13.0.0",
    "structlog>=24.0.0",
    "httpx>=0.26.0",
]
engine-sdk = [
    "redis>=5.0.0",
    "boto3>=1.34.0",
]
realtime-sdk = [
    "websockets>=12.0",
    "redis>=5.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
]
session-router = [
    "redis>=5.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.26.0",
    "redis>=5.0.0",
    "alembic>=1.13.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["dalston"]
