[project]
name = "dalston"
version = "0.1.0"
description = "Modular, self-hosted audio transcription server"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    # OpenTelemetry core (M19 distributed tracing)
    "opentelemetry-api>=1.20.0,<2.0.0",
    "opentelemetry-sdk>=1.20.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0,<2.0.0",
    # Prometheus metrics (M20)
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
gateway = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0",  # For engine catalog (M31)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "aioboto3>=13.0.0",
    "types-aiobotocore-s3>=2.13.0",
    "websockets>=12.0",  # For realtime WebSocket proxy
    "tinytag>=2.0.0",  # Audio metadata extraction
    # OpenTelemetry auto-instrumentation (M19)
    "opentelemetry-instrumentation-fastapi>=0.41b0,<1.0.0",
    "opentelemetry-instrumentation-redis>=0.41b0,<1.0.0",
    "opentelemetry-instrumentation-httpx>=0.41b0,<1.0.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0,<1.0.0",
]
orchestrator = [
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "aioboto3>=13.0.0",
    "httpx>=0.26.0",
    "fastapi>=0.109.0",  # Required for importing gateway.services
    "python-multipart>=0.0.6",  # Required by FastAPI for form data
    "websockets>=12.0",  # Required by gateway module
    "tinytag>=2.0.0",  # Required by gateway.services.audio_probe
    "aiohttp>=3.9.0",  # For lightweight HTTP server (metrics endpoint)
    "pyyaml>=6.0",  # For engine catalog YAML parsing (M29)
]
engine-sdk = [
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "pyyaml>=6.0",  # For engine.yaml loading (M30)
    # OpenTelemetry instrumentation (M19)
    "opentelemetry-instrumentation-redis>=0.41b0,<1.0.0",
    "opentelemetry-instrumentation-boto3sqs>=0.41b0,<1.0.0",
]
realtime-sdk = [
    "websockets>=12.0",
    "redis>=5.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "aioboto3>=13.0.0",  # S3 storage for audio/transcript persistence
    "types-aiobotocore-s3>=2.13.0",
    "audioop-lts>=0.2.1;python_version>='3.13'",  # audioop removed in Python 3.13
]
session-router = [
    "redis>=5.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.26.0",
    "redis>=5.0.0",
    "alembic>=1.13.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
    "numpy>=1.24.0",  # For VAD tests
    "jsonschema>=4.0.0",  # For engine YAML validation (M30)
    # OpenTelemetry test utilities (M19)
    "opentelemetry-test-utils>=0.41b0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["dalston"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = ["e2e: end-to-end tests requiring live Docker stack"]
addopts = "-m 'not e2e'"
