[project]
name = "dalston"
version = "0.1.0"
description = "Modular, self-hosted audio transcription server"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "structlog>=24.0.0",
    # OpenTelemetry core (M19 distributed tracing)
    # Pinned: OTel core 1.X.Y must match instrumentation 0.(X+21)bY exactly.
    # Loose ranges cause pip resolver backtracking (20+ min in CI).
    "opentelemetry-api==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.40.0",
    # Prometheus metrics (M20)
    "prometheus-client==0.24.1",
]

[project.optional-dependencies]
gateway = [
    "fastapi>=0.135.0",
    "uvicorn>=0.41.0",
    "python-multipart>=0.0.6",
    "redis>=7.0.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0",  # For engine catalog (M31)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",  # Lite-mode SQLite async driver
    "greenlet>=3.3.0",
    "aioboto3>=13.0.0",
    "types-aiobotocore-s3>=2.13.0",
    "websockets>=12.0",  # For realtime WebSocket proxy
    "tinytag>=2.0.0",  # Audio metadata extraction
    "huggingface_hub>=1.0.0",  # For HF card routing (M40.5)
    # OpenTelemetry auto-instrumentation (M19)
    "opentelemetry-instrumentation-fastapi==0.61b0",
    "opentelemetry-instrumentation-redis==0.61b0",
    "opentelemetry-instrumentation-httpx==0.61b0",
    "opentelemetry-instrumentation-sqlalchemy==0.61b0",
    "alembic>=1.13.0",
]
orchestrator = [
    "redis>=7.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",  # Lite-mode SQLite async driver
    "aioboto3>=13.0.0",
    "httpx>=0.26.0",
    "fastapi>=0.135.0",  # Required for importing gateway.services
    "python-multipart>=0.0.6",  # Required by FastAPI for form data
    "websockets>=12.0",  # Required by gateway module
    "tinytag>=2.0.0",  # Required by gateway.services.audio_probe
    "aiohttp>=3.9.0",  # For lightweight HTTP server (metrics endpoint)
    "pyyaml>=6.0",  # For engine catalog YAML parsing (M29)
    "alembic>=1.13.0",
]
engine-sdk = [
    "redis>=7.0.0",
    "boto3==1.42.70",
    "pyyaml>=6.0",  # For engine.yaml loading (M30)
    # OpenTelemetry instrumentation (M19)
    "opentelemetry-instrumentation-redis==0.61b0",
    "opentelemetry-instrumentation-boto3sqs==0.61b0",
    # HTTP server for engine interface contract (M79)
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
]
realtime-sdk = [
    "websockets>=12.0",
    "redis>=7.0.0",
    "numpy>=1.24.0",
    # NOTE: onnxruntime is NOT listed here on purpose. It caused GPU namespace
    # collisions when GPU engines installed realtime-sdk (CPU onnxruntime
    # overwrote onnxruntime-gpu files). Each engine brings its own runtime:
    # - ONNX engine: onnxruntime-gpu (GPU) or onnxruntime (CPU)
    # - Other engines: don't need onnxruntime at all
    # The realtime_sdk.vad module lazy-imports onnxruntime at runtime.
    "soxr>=0.3.0",  # High-quality sample rate conversion (libsoxr)
    "aioboto3>=13.0.0",  # S3 storage for audio/transcript persistence
    "types-aiobotocore-s3>=2.13.0",
    "audioop-lts>=0.2.1;python_version>='3.13'",  # audioop removed in Python 3.13
]
session-router = [
    "redis>=7.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.26.0",
    "redis>=7.0.0",
    "alembic>=1.13.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
    "numpy>=1.24.0",  # For VAD tests
    "soxr>=0.3.0",  # For resampling tests
    "jsonschema>=4.0.0",  # For engine YAML validation (M30)
    # OpenTelemetry test utilities (M19)
    "opentelemetry-test-utils==0.61b0",
    # Pinned OpenAI SDK for M61 contract suite
    "openai==2.29.0",
    # Pinned ElevenLabs SDK for M62 contract suite
    "elevenlabs==2.39.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    ".venv312",
    "__pycache__",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["dalston"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: end-to-end tests requiring live Docker stack",
    "integration: integration tests requiring Redis or other services",
    "benchmark: performance and load benchmarks (slow, run explicitly)",
]
addopts = "-m 'not e2e and not benchmark'"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "alembic/",
    "engines/",
]

# Ignore errors in tools (scaffold has dynamic typing)
[[tool.mypy.overrides]]
module = "dalston.tools.*"
ignore_errors = true

# Redis async client typing: redis-py uses union types (Awaitable[T] | T)
# that confuse mypy. Ignore errors in Redis-heavy modules.
# TODO: Gradually enable type checking as modules are fixed
[[tool.mypy.overrides]]
module = [
    "dalston.session_router.*",
    "dalston.realtime_sdk.*",
    "dalston.orchestrator.*",
    "dalston.engine_sdk.*",
    "dalston.common.streams",
    "dalston.common.streams_sync",
    "dalston.common.durable_events",
    "dalston.common.s3",
    "dalston.metrics_exporter",
    "dalston.logging",
]
ignore_errors = true

# Gateway modules with typing issues (mostly arg-type from optional params)
[[tool.mypy.overrides]]
module = [
    "dalston.gateway.api.*",
    "dalston.gateway.services.*",
    "dalston.gateway.main",
    "dalston.gateway.dependencies",
]
ignore_errors = true
