[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dalston-cli"
version = "0.1.0"
description = "Command-line client for Dalston transcription server"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "dalston-sdk>=0.1.0",
    "typer[all]>=0.12",
    "sounddevice>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.scripts]
dalston = "dalston_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["dalston_cli"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
